feat: added crud for task entity
