# modules/tasks/handlers/delete_task.go
@@ -7,25 +7,25 @@ import (
 	"github.com/Jardielson-s/api-task/modules/shared"
 )
 
-// DeleteUser(Soft delete) godoc
+// DeleteTask(Soft delete) godoc
 //
-//	@Summary		Delete user
-//	@Description	Delete  user in the database
-//	@Tags			users
+//	@Summary		Delete task
+//	@Description	Delete  task in the database
+//	@Tags			tasks
 //	@Accept			json
 //	@Produce		json
 //
 // @Security  Bearer
 //
-// @Param id path int true "User ID"
+// @Param id path int true "Task ID"
 // @Success 204
-// @Failure 404 {object} map[string]string "User not found"
+// @Failure 404 {object} map[string]string "Task not found"
 //
 //	@Failure		500		{string}	string	"Internal Server Error"
 //
-// @Router			/users/delete/{id} [delete]
-func (h *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
-	id := r.URL.Path[len("/users/delete/"):]
+// @Router			/tasks/delete/{id} [delete]
+func (h *TaskHandler) DeleteTask(w http.ResponseWriter, r *http.Request) {
+	id := r.URL.Path[len("/tasks/delete/"):]
 	var idNum int
 	if id == "" {
 		http.Error(w, "ID is required", http.StatusBadRequest)
@@ -33,7 +33,7 @@ func (h *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	}
 	fmt.Sscanf(id, "%d", &idNum)
 
-	err := h.repo.DeleteUser(idNum)
+	err := h.repo.DeleteTask(idNum)
 
 	if err != nil {
 		errorResponse := shared.CreateResponse{
