# modules/tasks/handlers/update_task.go
@@ -5,48 +5,50 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/Jardielson-s/api-task/internal/authenticate"
 	"github.com/Jardielson-s/api-task/modules/shared"
-	"github.com/Jardielson-s/api-task/modules/users/model"
+	"github.com/Jardielson-s/api-task/modules/tasks/model"
 )
 
-type UpdateUserBody struct {
-	Email    string  `json:"email" validate:"required,min=10,max=100"`
-	Password *string `json:"password"`
+type UpdateTaskBody struct {
+	Name    string  `json:"name" validate:"required,min=4,max=100"`
+	Summary *string `json:"summary"`
 }
 
-// UpdateUser godoc
+// UpdateTask godoc
 //
-//	@Summary		Update user
-//	@Description	Update user in the database
-//	@Tags			users
+//	@Summary		Update task
+//	@Description	Update task in the database
+//	@Tags			tasks
 //	@Accept			json
 //	@Produce		json
 //	@Security  Bearer
 //
-// @Param id path int true "User ID"
+// @Param id path int true "Task ID"
 //
-//	@Param			user	body		UpdateUserBody true "Descrição do parâmetro"
-//	@Success		201		{object}	shared.CreateUserResponse  "Usuário atualizado com sucesso"
+//	@Param			task	body		UpdateTaskBody true "Description"
+//	@Success		201		{object}	shared.CreateTaskResponse  "Task updated"
 //	@Failure		400		{object}	shared.CreateResponse
 //
 // @Failure 		400 	{object}	shared.CreateResponse
 //
 //	@Failure		500		{string}	string	"Internal Server Error"
-//	@Router			/users/update/{id} [patch]
-func (h *UserHandler) UpdateUserHandler(w http.ResponseWriter, r *http.Request) {
-	var user UpdateUserBody
-	id := r.URL.Path[len("/users/update/"):]
+//	@Router			/tasks/update/{id} [patch]
+func (h *TaskHandler) UpdateTaskHandler(w http.ResponseWriter, r *http.Request) {
+	tokenInfo := r.Context().Value("tokenInfo").(authenticate.TokenInfo)
+	var task UpdateTaskBody
+	id := r.URL.Path[len("/tasks/update/"):]
 	var idNum int
 	if id == "" {
 		http.Error(w, "ID is required", http.StatusBadRequest)
 		return
 	}
 	fmt.Sscanf(id, "%d", &idNum)
-	if err := json.NewDecoder((r.Body)).Decode(&user); err != nil {
+	if err := json.NewDecoder((r.Body)).Decode(&task); err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	err := validate.Struct(user)
+	err := validate.Struct(task)
 	if err != nil {
 		errorResponse := shared.CreateResponse{
 			Code:    http.StatusBadRequest,
@@ -56,10 +58,14 @@ func (h *UserHandler) UpdateUserHandler(w http.ResponseWriter, r *http.Request) 
 		shared.JSONError(w, errorResponse, http.StatusBadRequest)
 		return
 	}
-	result, err := h.service.UpdateUserService(idNum, model.UpdateUser{
-		Email:    user.Email,
-		Password: user.Password,
-	})
+	var userId *int
+	if findElement(tokenInfo.Roles, shared.GetTechnicianRole()) {
+		userId = &tokenInfo.ID
+	}
+	result, err := h.service.UpdateTaskService(idNum, model.TaskUpdate{
+		Name:    task.Name,
+		Summary: task.Summary,
+	}, userId)
 
 	if err != nil {
 		errorResponse := shared.CreateResponse{
